// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The StripeWebhookEndpoints stack matches the snapshot 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "IsProd": {
      "Fn::Equals": [
        {
          "Ref": "Stage",
        },
        "PROD",
      ],
    },
  },
  "Description": "Endpoints to handle stripe webhooks",
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction",
      "GuLambdaFunction",
      "GuApiGatewayWithLambdaByPath",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "RestApiEndpoint0551178A": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "RestApi0C43BF4B",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "RestApiDeploymentStageprod3855DE66",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "App": {
      "Default": "stripe-webhook-endpoints",
      "Description": "Endpoints to handle stripe webhooks",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "membership-dist",
      "Description": "Bucket to copy files to",
      "Type": "String",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "Stack": {
      "Default": "membership",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Set by RiffRaff on each deploy",
      "Type": "String",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Stripe Webhook Endpoints received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "STRIPE-WEBHOOK-ENDPOINTS-CDK- CODE API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-webhook-endpoints-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "stripe-webhook-endpoints-CODE exceeded 1% 5XX error rate",
        "AlarmName": "STRIPE-WEBHOOK-ENDPOINTS-CDK- CODE API gateway 5XX error",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-webhook-endpoints-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmStripewebhookendpointsD4B32CBF": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "stripe-webhook-endpoints exceeded 1% error rate",
        "AlarmName": "High 5XX error percentage from stripe-webhook-endpoints (ApiGateway) in CODE",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for stripe-webhook-endpoints",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-CODE-stripe-webhook-endpoints",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-CODE-stripe-webhook-endpoints",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "StripeWebhookEndpointsDomainName",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
        "Stage": {
          "Ref": "RestApiDeploymentStageprod3855DE66",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "CustomerUpdatedLambda": {
      "Properties": {
        "CodeUri": {
          "Bucket": {
            "Ref": "DeployBucket",
          },
          "Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "A lambda for handling customer updates",
        "Environment": {
          "Variables": {
            "App": "stripe-customer-updated",
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "Events": {
          "AcquisitionEvent": {
            "Properties": {
              "Method": "post",
              "Path": "/customer-updated",
              "RequestParameters": [
                "method.request.querystring.apiToken",
              ],
            },
            "Type": "Api",
          },
        },
        "FunctionName": {
          "Fn::Sub": "stripe-customer-updated-\${Stage}",
        },
        "Handler": "com.gu.stripeCardUpdated.Lambda::apply",
        "MemorySize": 1536,
        "Policies": [
          "AWSLambdaBasicExecutionRole",
          {
            "Statement": {
              "Action": [
                "ssm:GetParametersByPath",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${Stage}/membership/payment-intent-issues",
                },
              ],
            },
          },
          {
            "Statement": [
              {
                "Action": "s3:GetObject",
                "Effect": "Allow",
                "Resource": [
                  "arn:aws:s3::*:membership-dist/*",
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/zuoraRest-\${Stage}.*.json",
                  },
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/trustedApi-\${Stage}.*.json",
                  },
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/stripe-\${Stage}.*.json",
                  },
                ],
              },
            ],
          },
        ],
        "Runtime": "java11",
        "Tags": {
          "Stack": "membership",
          "Stage": "CODE",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-service-lambdas",
        },
        "Timeout": 900,
      },
      "Type": "AWS::Serverless::Function",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "stripe-webhook-endpoints-code.membership.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "StripeWebhookEndpointsDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "PaymentIntentIssuesLambda": {
      "Properties": {
        "CodeUri": {
          "Bucket": {
            "Ref": "DeployBucket",
          },
          "Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "A lambda for handling payment intent issues (cancellation, failure, action required)",
        "Environment": {
          "Variables": {
            "App": "payment-intent-issues",
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "Events": {
          "AcquisitionEvent": {
            "Properties": {
              "Method": "post",
              "Path": "/payment-intent-issue",
            },
            "Type": "Api",
          },
        },
        "FunctionName": {
          "Fn::Sub": "stripe-payment-intent-issues-\${Stage}",
        },
        "Handler": "com.gu.paymentIntentIssues.Lambda::handler",
        "MemorySize": 512,
        "Policies": [
          "AWSLambdaBasicExecutionRole",
          {
            "Statement": {
              "Action": [
                "ssm:GetParametersByPath",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${Stage}/membership/payment-intent-issues",
                },
              ],
            },
          },
          {
            "Statement": [
              {
                "Action": "s3:GetObject",
                "Effect": "Allow",
                "Resource": [
                  "arn:aws:s3::*:membership-dist/*",
                ],
              },
            ],
          },
        ],
        "Runtime": "java11",
        "Tags": {
          "Stack": "membership",
          "Stage": "CODE",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-service-lambdas",
        },
        "Timeout": 300,
      },
      "Type": "AWS::Serverless::Function",
    },
    "RestApi0C43BF4B": {
      "Properties": {
        "Name": "membership-CODE-stripe-webhook-endpoints",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "RestApiAccount7C83CF5A": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "RestApi0C43BF4B",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "RestApiCloudWatchRoleE3ED6605",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "RestApiCloudWatchRoleE3ED6605": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "RestApiDeployment180EC50345ea2807fac3b40b9e135d8de85afb5a": {
      "DependsOn": [
        "RestApicustomerupdatedPOSTC990C432",
        "RestApicustomerupdatedD991BA1D",
        "RestApipaymentintentissuePOSTA78C3986",
        "RestApipaymentintentissue6417F57B",
      ],
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "RestApiDeploymentStageprod3855DE66": {
      "DependsOn": [
        "RestApiAccount7C83CF5A",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "RestApiDeployment180EC50345ea2807fac3b40b9e135d8de85afb5a",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
        "StageName": "prod",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "RestApicustomerupdatedD991BA1D": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "customer-updated",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApicustomerupdatedPOSTApiPermissionStripeWebhookEndpointsCODERestApi55309A7CPOSTcustomerupdatedBDC2C077": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "customerupdatedcdklambda94E6ED36",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/customer-updated",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApicustomerupdatedPOSTApiPermissionTestStripeWebhookEndpointsCODERestApi55309A7CPOSTcustomerupdated17E14F5E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "customerupdatedcdklambda94E6ED36",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/customer-updated",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApicustomerupdatedPOSTC990C432": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "customerupdatedcdklambda94E6ED36",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "RestApicustomerupdatedD991BA1D",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApipaymentintentissue6417F57B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "payment-intent-issue",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApipaymentintentissuePOSTA78C3986": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "paymentintentissuescdklambdaD549B87A",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "RestApipaymentintentissue6417F57B",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApipaymentintentissuePOSTApiPermissionStripeWebhookEndpointsCODERestApi55309A7CPOSTpaymentintentissue004976C5": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaD549B87A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/payment-intent-issue",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApipaymentintentissuePOSTApiPermissionTestStripeWebhookEndpointsCODERestApi55309A7CPOSTpaymentintentissue1D1335F6": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaD549B87A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/payment-intent-issue",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3inlinepolicyForCustomerUpdatedlambda27B7FA51": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3::*:membership-dist/*",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/CODE/zuoraRest-CODE.*.json",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/CODE/trustedApi-CODE.*.json",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/CODE/stripe-CODE.*.json",
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicyForCustomerUpdatedlambda27B7FA51",
        "Roles": [
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SSMinlinepolicyB56CB2A2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/payment-intent-issues/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SSMinlinepolicyB56CB2A2",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StripeWebhookEndpointsDomainName": {
      "Properties": {
        "DomainName": "stripe-webhook-endpoints-code.membership.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "customerupdatedcdklambda94E6ED36": {
      "DependsOn": [
        "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7",
        "customerupdatedcdklambdaServiceRole70F25448",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/stripe-customer-updated/membership/CODE/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
        },
        "Description": "A lambda for handling customer updates",
        "Environment": {
          "Variables": {
            "APP": "stripe-customer-updated",
            "App": "stripe-customer-updated",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "stripe-customer-updated-cdk-CODE",
        "Handler": "com.gu.stripeCardUpdated.Lambda::apply",
        "MemorySize": 1536,
        "Role": {
          "Fn::GetAtt": [
            "customerupdatedcdklambdaServiceRole70F25448",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-customer-updated",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "customerupdatedcdklambdaServiceRole70F25448": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-customer-updated",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/stripe-customer-updated/membership/CODE/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-customer-updated",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/stripe-customer-updated/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7",
        "Roles": [
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "paymentintentissuescdklambdaD549B87A": {
      "DependsOn": [
        "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D",
        "paymentintentissuescdklambdaServiceRole5EF38E3E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/payment-intent-issues/membership/CODE/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
        },
        "Description": "A lambda for handling payment intent issues (cancellation, failure, action required)",
        "Environment": {
          "Variables": {
            "APP": "payment-intent-issues",
            "App": "payment-intent-issues",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "stripe-payment-intent-issues-cdk-CODE",
        "Handler": "com.gu.paymentIntentIssues.Lambda::handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaServiceRole5EF38E3E",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "payment-intent-issues",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "paymentintentissuescdklambdaServiceRole5EF38E3E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "payment-intent-issues",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/payment-intent-issues/membership/CODE/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/payment-intent-issues",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/payment-intent-issues/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Transform": "AWS::Serverless-2016-10-31",
}
`;

exports[`The StripeWebhookEndpoints stack matches the snapshot 2`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "IsProd": {
      "Fn::Equals": [
        {
          "Ref": "Stage",
        },
        "PROD",
      ],
    },
  },
  "Description": "Endpoints to handle stripe webhooks",
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction",
      "GuLambdaFunction",
      "GuApiGatewayWithLambdaByPath",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "RestApiEndpoint0551178A": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "RestApi0C43BF4B",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "RestApiDeploymentStageprod3855DE66",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "App": {
      "Default": "stripe-webhook-endpoints",
      "Description": "Endpoints to handle stripe webhooks",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "membership-dist",
      "Description": "Bucket to copy files to",
      "Type": "String",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "Stack": {
      "Default": "membership",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Set by RiffRaff on each deploy",
      "Type": "String",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Stripe Webhook Endpoints received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "STRIPE-WEBHOOK-ENDPOINTS-CDK- PROD API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-webhook-endpoints-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "stripe-webhook-endpoints-PROD exceeded 1% 5XX error rate",
        "AlarmName": "STRIPE-WEBHOOK-ENDPOINTS-CDK- PROD API gateway 5XX error",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "stripe-webhook-endpoints-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmStripewebhookendpointsD4B32CBF": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "stripe-webhook-endpoints exceeded 1% error rate",
        "AlarmName": "High 5XX error percentage from stripe-webhook-endpoints (ApiGateway) in PROD",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for stripe-webhook-endpoints",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-PROD-stripe-webhook-endpoints",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-PROD-stripe-webhook-endpoints",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "StripeWebhookEndpointsDomainName",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
        "Stage": {
          "Ref": "RestApiDeploymentStageprod3855DE66",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "CustomerUpdatedLambda": {
      "Properties": {
        "CodeUri": {
          "Bucket": {
            "Ref": "DeployBucket",
          },
          "Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "A lambda for handling customer updates",
        "Environment": {
          "Variables": {
            "App": "stripe-customer-updated",
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "Events": {
          "AcquisitionEvent": {
            "Properties": {
              "Method": "post",
              "Path": "/customer-updated",
              "RequestParameters": [
                "method.request.querystring.apiToken",
              ],
            },
            "Type": "Api",
          },
        },
        "FunctionName": {
          "Fn::Sub": "stripe-customer-updated-\${Stage}",
        },
        "Handler": "com.gu.stripeCardUpdated.Lambda::apply",
        "MemorySize": 1536,
        "Policies": [
          "AWSLambdaBasicExecutionRole",
          {
            "Statement": {
              "Action": [
                "ssm:GetParametersByPath",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${Stage}/membership/payment-intent-issues",
                },
              ],
            },
          },
          {
            "Statement": [
              {
                "Action": "s3:GetObject",
                "Effect": "Allow",
                "Resource": [
                  "arn:aws:s3::*:membership-dist/*",
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/zuoraRest-\${Stage}.*.json",
                  },
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/trustedApi-\${Stage}.*.json",
                  },
                  {
                    "Fn::Sub": "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/\${Stage}/stripe-\${Stage}.*.json",
                  },
                ],
              },
            ],
          },
        ],
        "Runtime": "java11",
        "Tags": {
          "Stack": "membership",
          "Stage": "PROD",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-service-lambdas",
        },
        "Timeout": 900,
      },
      "Type": "AWS::Serverless::Function",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "stripe-webhook-endpoints-prod.membership.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "StripeWebhookEndpointsDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "PaymentIntentIssuesLambda": {
      "Properties": {
        "CodeUri": {
          "Bucket": {
            "Ref": "DeployBucket",
          },
          "Key": {
            "Fn::Sub": "\${Stack}/\${Stage}/\${App}/\${App}.jar",
          },
        },
        "Description": "A lambda for handling payment intent issues (cancellation, failure, action required)",
        "Environment": {
          "Variables": {
            "App": "payment-intent-issues",
            "Stack": {
              "Ref": "Stack",
            },
            "Stage": {
              "Ref": "Stage",
            },
          },
        },
        "Events": {
          "AcquisitionEvent": {
            "Properties": {
              "Method": "post",
              "Path": "/payment-intent-issue",
            },
            "Type": "Api",
          },
        },
        "FunctionName": {
          "Fn::Sub": "stripe-payment-intent-issues-\${Stage}",
        },
        "Handler": "com.gu.paymentIntentIssues.Lambda::handler",
        "MemorySize": 512,
        "Policies": [
          "AWSLambdaBasicExecutionRole",
          {
            "Statement": {
              "Action": [
                "ssm:GetParametersByPath",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Sub": "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/\${Stage}/membership/payment-intent-issues",
                },
              ],
            },
          },
          {
            "Statement": [
              {
                "Action": "s3:GetObject",
                "Effect": "Allow",
                "Resource": [
                  "arn:aws:s3::*:membership-dist/*",
                ],
              },
            ],
          },
        ],
        "Runtime": "java11",
        "Tags": {
          "Stack": "membership",
          "Stage": "PROD",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-service-lambdas",
        },
        "Timeout": 300,
      },
      "Type": "AWS::Serverless::Function",
    },
    "RestApi0C43BF4B": {
      "Properties": {
        "Name": "membership-PROD-stripe-webhook-endpoints",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "RestApiAccount7C83CF5A": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "RestApi0C43BF4B",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "RestApiCloudWatchRoleE3ED6605",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "RestApiCloudWatchRoleE3ED6605": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "RestApiDeployment180EC503cb4e77bccd9fa1f378ea96d72e85ff7c": {
      "DependsOn": [
        "RestApicustomerupdatedPOSTC990C432",
        "RestApicustomerupdatedD991BA1D",
        "RestApipaymentintentissuePOSTA78C3986",
        "RestApipaymentintentissue6417F57B",
      ],
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "RestApiDeploymentStageprod3855DE66": {
      "DependsOn": [
        "RestApiAccount7C83CF5A",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "RestApiDeployment180EC503cb4e77bccd9fa1f378ea96d72e85ff7c",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
        "StageName": "prod",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "RestApicustomerupdatedD991BA1D": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "customer-updated",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApicustomerupdatedPOSTApiPermissionStripeWebhookEndpointsPRODRestApiEB155C28POSTcustomerupdated6604B1C1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "customerupdatedcdklambda94E6ED36",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/customer-updated",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApicustomerupdatedPOSTApiPermissionTestStripeWebhookEndpointsPRODRestApiEB155C28POSTcustomerupdatedFCA50AC3": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "customerupdatedcdklambda94E6ED36",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/customer-updated",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApicustomerupdatedPOSTC990C432": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "customerupdatedcdklambda94E6ED36",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "RestApicustomerupdatedD991BA1D",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApipaymentintentissue6417F57B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "payment-intent-issue",
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApipaymentintentissuePOSTA78C3986": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "paymentintentissuescdklambdaD549B87A",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "RestApipaymentintentissue6417F57B",
        },
        "RestApiId": {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApipaymentintentissuePOSTApiPermissionStripeWebhookEndpointsPRODRestApiEB155C28POSTpaymentintentissueF8861084": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaD549B87A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/payment-intent-issue",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApipaymentintentissuePOSTApiPermissionTestStripeWebhookEndpointsPRODRestApiEB155C28POSTpaymentintentissueAB1C94B9": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaD549B87A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/payment-intent-issue",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "S3inlinepolicyForCustomerUpdatedlambda27B7FA51": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3::*:membership-dist/*",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/PROD/zuoraRest-PROD.*.json",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/PROD/trustedApi-PROD.*.json",
                "arn:aws:s3:::gu-reader-revenue-private/membership/support-service-lambdas/PROD/stripe-PROD.*.json",
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicyForCustomerUpdatedlambda27B7FA51",
        "Roles": [
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SSMinlinepolicyB56CB2A2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/payment-intent-issues/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SSMinlinepolicyB56CB2A2",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StripeWebhookEndpointsDomainName": {
      "Properties": {
        "DomainName": "stripe-webhook-endpoints-prod.membership.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "customerupdatedcdklambda94E6ED36": {
      "DependsOn": [
        "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7",
        "customerupdatedcdklambdaServiceRole70F25448",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/stripe-customer-updated/membership/PROD/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
        },
        "Description": "A lambda for handling customer updates",
        "Environment": {
          "Variables": {
            "APP": "stripe-customer-updated",
            "App": "stripe-customer-updated",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "stripe-customer-updated-cdk-PROD",
        "Handler": "com.gu.stripeCardUpdated.Lambda::apply",
        "MemorySize": 1536,
        "Role": {
          "Fn::GetAtt": [
            "customerupdatedcdklambdaServiceRole70F25448",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-customer-updated",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "customerupdatedcdklambdaServiceRole70F25448": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "stripe-customer-updated",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/stripe-customer-updated/membership/PROD/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-customer-updated",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/stripe-customer-updated/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "customerupdatedcdklambdaServiceRoleDefaultPolicy50D952D7",
        "Roles": [
          {
            "Ref": "customerupdatedcdklambdaServiceRole70F25448",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "paymentintentissuescdklambdaD549B87A": {
      "DependsOn": [
        "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D",
        "paymentintentissuescdklambdaServiceRole5EF38E3E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/payment-intent-issues/membership/PROD/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
        },
        "Description": "A lambda for handling payment intent issues (cancellation, failure, action required)",
        "Environment": {
          "Variables": {
            "APP": "payment-intent-issues",
            "App": "payment-intent-issues",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "stripe-payment-intent-issues-cdk-PROD",
        "Handler": "com.gu.paymentIntentIssues.Lambda::handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "paymentintentissuescdklambdaServiceRole5EF38E3E",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "payment-intent-issues",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "paymentintentissuescdklambdaServiceRole5EF38E3E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "payment-intent-issues",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/payment-intent-issues/membership/PROD/stripe-webhook-endpoints/stripe-webhook-endpoints.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/payment-intent-issues",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/payment-intent-issues/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "paymentintentissuescdklambdaServiceRoleDefaultPolicyD200FB2D",
        "Roles": [
          {
            "Ref": "paymentintentissuescdklambdaServiceRole5EF38E3E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Transform": "AWS::Serverless-2016-10-31",
}
`;
